# cl-2026-2-lab

./: .gitignore  CNN_vision.ipynb  CNN_vision.py  README.md  ejercicios_clase.csv  practica2.py  práctica1_abhner.py  pyproject.toml
notebooks/: 0_lab_intro.ipynb  10_local_first_llms.ipynb  10_local_first_llms.py  1_1_niveles_linguisticos.ipynb  1_1_niveles_linguisticos.py  1_2_niveles_linguisticos.ipynb  1_2_niveles_linguisticos.py  1_niveles_linguisticos.ipynb  1_niveles_linguisticos.py  1_niveles_linguisticos_I.ipynb  1_niveles_linguisticos_I.py  2_niveles_linguisticos_II.ipynb  2_niveles_linguisticos_II.py  3_stats_properties.ipynb  3_stats_properties.py  4_vectors.ipynb  4_vectors.py  5_lm_stats.ipynb  5_lm_stats.py  6_tokenization.ipynb  6_tokenization.py  7_neural_lm.ipynb  7_neural_lm.py  8_pytorch_primer.ipynb  8_pytorch_primer.py  8_transformers.ipynb  9_transformers.ipynb  9_transformers.py
practicas/GramerOmarFC/P0/: README.md
practicas/GramerOmarFC/P1/: Practica1.ipynb  Practica1.py
practicas/GramerOmarFC/P2/: Practica2.ipynb  Practica2.py  README.txt  languages_and_dialects_geo.csv  languoid.csv
practicas/GramerOmarFC/P3/: Practica3.ipynb  Practica3.py
practicas/GramerOmarFC/P4/: Practica4.ipynb  Practica4.py  README.md  Untitled.ipynb
practicas/GramerOmarFC/P5/: Practica5.ipynb  Practica5.py  emissions.csv  readme.md  readme.txt
practicas/Hambystoma/P0/: README.md
practicas/Hambystoma/P1/: P1-NivelesDeLenguaje.ipynb  P1-NivelesDeLenguaje.py
practicas/Hambystoma/P3/: P3-RepresentacionesVectoriales.ipynb  P3-RepresentacionesVectoriales.py
practicas/IanFoi/P0/: README.md
practicas/IanFoi/P1/: Practica1_Niveles_del_lenguaje .ipynb  Practica1_Niveles_del_lenguaje.ipynb  Practica1_Niveles_del_lenguaje.py  README.md
practicas/IanFoi/P2/: Practica2_Estadisticas_De_Lenguaje_y_Diversidad.ipynb  Practica2_Estadisticas_De_Lenguaje_y_Diversidad.py  README.md
practicas/IanFoi/P3/: Practica3_Representaciones_Vectoriales.ipynb  Practica3_Representaciones_Vectoriales.py  (+1 more)
practicas/abhner-a/: motor_busqueda.py  practica_3.ipynb
(+128 files in other folders)
