[project]
name = "cl-2026-2-lab"
version = "0.0.4"
description = "Repositorio para prácticas de laboratorio del curso de Lingüística Computacional 2026-2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-ruff>=0.3.1",
    "jupyterlab>=4.5.3",
    "jupyterlab-rise>=0.43.1",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sklearn-crfsuite>=0.5.0",
    "spacy>=3.8.11",
]
