[project]
name = "cl-2026-2-lab"
version = "0.0.4"
description = "Repositorio para prácticas de laboratorio del curso de Lingüística Computacional 2026-2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0",
    "elotl>=0.1.1",
    "gensim>=4.4.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.3.1",
    "jupyterlab>=4.5.3",
    "jupyterlab-rise>=0.43.1",
    "jupytex>=0.0.3",
    "jupytext>=1.19.1",
    "latexmk>=0.0.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "pip>=26.0.1",
    "plotly>=6.5.2",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sklearn-crfsuite>=0.5.0",
    "spacy>=3.8.11",
    "subword-nmt>=0.3.8",
    "transformers>=5.5.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.10.0",
  "torchvision>=0.26.0",
]
cu130 = [
  "torch>=2.10.0",
  "torchvision>=0.26.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
